--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base(${topic.name}, ~{::body}, _, _, _)}">
+	th:replace="~{fragments/layout :: base(${topic.name}, ~{::body}, _, _, ~{::style})}">
 <head>
 <meta charset="utf-8">
+
+<style type="text/css">
+#finish-btn.active {
+	background-color: #198754;
+	border-color: #198754
+}
+</style>
 </head>
 <body>
 	<!-- Topic info -->
 	<div class="card mt-3">
 		<div class="card-body">
-			<h2 class="card-title text-center" th:text="${topic.name}">Topic
-				Name</h2>
+			<h2 class="card-title text-center" th:text="${topic.name}">Topic Name</h2>
 			<p th:text="${topic.description}"></p>
+
+			<div class="d-flex justify-content-end">
+				<button id="finishTopic" class="btn btn-outline-success"
+					th:classappend="${topic.user.finished} ? 'active'">
+					<i class="fa fa-check"></i>
+					<span th:text="${topic.user.finished} ? 'Marcado como concluído' : 'Marcar como concluído'">Marcar
+						como concluído</span>
+				</button>
+			</div>
 		</div>
 	</div>
 
@@ -24,66 +39,51 @@
 		<div class="card-body">
 			<h4 class="card-title text-light" th:text="'Quiz - ' + ${topic.name}">Quiz</h4>
 
-			<button id="startQuiz"
-				class="btn btn-outline-light btn-lg form-control mb-3">Iniciar
-				Quiz</button>
+			<button id="startQuiz" class="btn btn-outline-light btn-lg form-control mb-3">Iniciar Quiz</button>
 
-			<div id="quizResult"
-				class="p-3 text-center text-danger bg-white rounded"
-				style="display: none;">
+			<div id="quizResult" class="p-3 text-center text-danger bg-white rounded" style="display: none;">
 				<span class="h4">Resultado do Quiz</span>
 				<br>
 			</div>
 
-			<div id="questionContainer" class="p-2 bg-white rounded"
-				style="display: none;">
+			<div id="questionContainer" class="p-2 bg-white rounded" style="display: none;">
 				<span id="questionIndex" class="fw-bold">- Question 1 de 3</span>
 				<hr>
 
-				<h5 id="question">Os sistemas de informacao estao evoluindo de
-					acordo com as tendencias de mercado, eles proporcionam ganhos
-					imensuraveis para as organizacoes no que diz respeito a ganho de
-					espaco organizacao dos arquivos e informacoes e com isso a
-					liberdade de acesso, representada pela possibilidade de trabalhar
-					com os dados oferecidos pelo sistema da melhor forma possivel.
-					Assim sendo, podemos concluir que:</h5>
+				<h5 id="question">Os sistemas de informacao estao evoluindo de acordo com as tendencias de mercado,
+					eles proporcionam ganhos imensuraveis para as organizacoes no que diz respeito a ganho de espaco
+					organizacao dos arquivos e informacoes e com isso a liberdade de acesso, representada pela possibilidade
+					de trabalhar com os dados oferecidos pelo sistema da melhor forma possivel. Assim sendo, podemos concluir
+					que:</h5>
 				<br>
 
 				<!-- Answers -->
 				<div class="form-check mb-3">
-					<input class="form-check-input" type="radio"
-						name="alternativeRadio" id="alternativeRadio1">
+					<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio1">
 
-					<label class="form-check-label" for="alternativeRadio1">Alternativa
-						1</label>
+					<label class="form-check-label" for="alternativeRadio1">Alternativa 1</label>
 				</div>
 
 				<div class="form-check mb-3">
-					<input class="form-check-input" type="radio"
-						name="alternativeRadio" id="alternativeRadio2">
-					<label class="form-check-label" for="alternativeRadio2">
-						Alternativa 2</label>
+					<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio2">
+					<label class="form-check-label" for="alternativeRadio2"> Alternativa 2</label>
 				</div>
 			</div>
 
 			<div class="row mt-3">
 				<div class="col">
-					<button id="finishQuiz" type="button"
-						class="btn btn-secondary btn-lg form-control"
+					<button id="finishQuiz" type="button" class="btn btn-secondary btn-lg form-control"
 						style="display: none;">Finalizar</button>
 				</div>
 
 				<div class="col">
-					<button id="answerQuestion" type="button"
-						class="btn btn-outline-light btn-lg form-control"
+					<button id="answerQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
 						style="display: none;">Responder</button>
 				</div>
 
 				<div class="col">
-					<button id="nextQuestion" type="button"
-						class="btn btn-outline-light btn-lg form-control"
-						style="display: none;" onclick="nextQuestion()">Próxima
-						Pergunta</button>
+					<button id="nextQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
+						style="display: none;" onclick="nextQuestion()">Próxima Pergunta</button>
 				</div>
 			</div>
 		</div>
@@ -91,8 +91,38 @@
 
 	<script type="text/javascript" th:inline="javascript">
 		$('#content').html(/*[[${topic.htmlContent}]]*/null);
-
 		let questions = /*[[${questions}]]*/null;
+
+		let waiting = false;
+
+		$('#finishTopic').click(function() {
+			if (waiting) {
+				return false;
+			}
+
+			waiting = true;
+
+			let button = $(this);
+			let buttonLabel = $('#finishTopic span');
+
+			buttonLabel.text('Aguarde ...');
+
+			$.post(location.href + '/finished')
+				.done(function() {
+					if (button.hasClass('active')) {
+						button.removeClass('active');
+						buttonLabel.text("Marcar como concluído");
+					} else {
+						button.addClass('active');
+						buttonLabel.text("Marcado como concluído");
+					}
+	
+					waiting = false;
+				}).fail(function() {
+					button.removeClass('active');
+					buttonLabel.text("Erro ao marcar tópico como concluído!");
+				});
+		});
 	</script>
 
 	<script type="text/javascript" th:src="@{/js/topic-details.js}"></script>
