--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -7,12 +7,16 @@
 .bg-green {
 	background-color: #05B714;
 }
+
+.green {
+	color: #05B714;
+}
 </style>
 </head>
 <body>
 	<div class="card mt-3 p-1">
 		<div class="card-body">
-			<h4 class="card-title text-center fw-bold" th:text="${discipline.code} + ' - ' +${discipline.name}"></h4>
+			<h4 class="card-title text-center fw-bolder" th:text="${discipline.code} + ' - ' +${discipline.name}"></h4>
 
 			<div class="mb-2">
 				<b>Ementa:</b>
@@ -42,7 +46,6 @@
 				aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"
 				th:style="'width: ' + ${progress} + '%'" th:classappend="${progress} == 100 ? 'bg-green' : 'bg-danger'"
 				th:text="${progress} > 0 ? ${progress} + '% ESTUDADO'">55% estudado</div>
-			<span th:if="${progress} == 0" class="fw-bold text-primary">Comece a estudar agora mesmo!</span>
 		</div>
 	</div>
 
@@ -53,7 +56,7 @@
 		<th:block th:text="${message}" />
 	</div>
 
-	<div class="card">
+	<div class="card shadow">
 		<div class="card-header">
 			<ul class="nav nav-tabs fw-bolder">
 				<li class="nav-item">
@@ -73,13 +76,13 @@
 		<div class="card-body bg-danger">
 			<!-- Topics -->
 			<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'topics')}">
-				<a href="#" class="list-group-item list-group-item-action shadow mb-2 rounded" th:each="topic : ${topics}"
-					th:href="@{/topic/{id}(id=${topic.id})}">
+				<a href="#" class="list-group-item list-group-item-action shadow mb-2 rounded border border-5 p-2"
+					th:each="topic : ${topics}" th:href="@{/topic/{id}(id=${topic.id})}"
+					th:classappend="${topic.user.finished} ? 'border-success'">
 					<div class="d-flex w-100 justify-content-between">
-						<h5 class="mb-1" th:text="${topic.name}">Topic Name</h5>
+						<h5 class="mb-1 fw-bolder" th:text="${topic.name}">Topic Name</h5>
 
-						<i class="fa fa-check-circle fa-2x" aria-hidden="true"
-							th:classappend="${topic.user.finished} ? 'text-success'"></i>
+						<i class="fa fa-check-circle fa-2x" aria-hidden="true" th:classappend="${topic.user.finished} ? 'green'"></i>
 					</div>
 					<p class="mb-1" th:text="${topic.description}">Some placeholder content in a paragraph.</p>
 					<small class="text-muted">And some muted small print.</small>
@@ -146,7 +149,7 @@
 				</div>
 
 				<div class="list-group" th:unless="${#lists.isEmpty(forumTopics)}">
-					<a href="#" class="list-group-item list-group-item-action" th:each="topic : ${forumTopics}"
+					<a href="#" class="list-group-item list-group-item-action mb-2 shadow" th:each="topic : ${forumTopics}"
 						th:href="@{/disciplines/{id}/forum-topics/{topicId}(id=${discipline.id}, topicId=${topic.id})}">
 
 						<div class="d-flex w-100 justify-content-between">
