Fix error of discipline filters

--- a/src/main/resources/templates/disciplines/course-details.html
+++ b/src/main/resources/templates/disciplines/course-details.html
@@ -46,8 +46,7 @@
 		<!-- Disciplines -->
 		<div id="disciplinesContainer" class="row row-cols-1 row-cols-md-3 g-4">
 			<div class="col" th:each="discipline : ${disciplines}" th:data-semester="${discipline.semester}">
-				<div class="card btn-card h-100 shadow-lg" th:onclick="'go(\'' + ${discipline.id} + '\');'">
-					<img src="" class="card-img-top" alt="">
+				<div class="card btn-card h-100 shadow-lg" th:onclick="'showDiscipline(\'' + ${discipline.id} + '\');'">
 					<h5 class="card-header btn-card-header" th:text="${discipline.name}">Estrutura de Dados</h5>
 					<div class="card-body">
 						<p class="card-text text-truncate" th:text="${discipline.description}">This is a wider card with
