--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -21,9 +21,16 @@
 						<p class="card-text text-truncate" th:text="${discipline.description}">This is a wider card with
 							supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 					</div>
-					<div class="card-footer text-muted">
-						Visto por último
-						<time class="timeago" th:datetime="${#dates.formatISO(discipline.user.accessDate)}"></time>
+					<div class="card-footer">
+						<div th:with="progress=${discipline.user.progress}">
+							<div class="progress text-center" style="height: 15px;">
+								<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
+									aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"
+									th:style="'width: ' + ${progress} + '%'"
+									th:classappend="${progress} == 100 ? 'bg-green' : 'bg-primary'"></div>
+							</div>
+							<small class="text-muted" th:text="${progress} > 0 ? ${progress} + '% concluído'"></small>
+						</div>
 					</div>
 				</div>
 			</div>
