--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -1,171 +1,172 @@
 <!DOCTYPE html>
 <html xmlns:th="www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base(${discipline.code}, ~{::body}, _, _, ~{::style})}">
+	th:replace="~{fragments/layout :: base(${discipline.code}, ~{::body}, _, _, _)}">
 <head>
 <meta charset="utf-8">
-<style type="text/css">
-.bg-green {
-	background-color: #05B714;
-}
-
-.green {
-	color: #05B714;
-}
-</style>
 </head>
 <body>
-	<div class="card mt-3 p-1">
-		<div class="card-body">
-			<h4 class="card-title text-center fw-bolder" th:text="${discipline.code} + ' - ' +${discipline.name}"></h4>
+	<div class="row">
+		<div class="p-3 mb-5 bg-dark text-white">
+			<div class="card-body">
+				<h3 class="card-title text-center fw-bolder" th:text="${discipline.code} + ' - ' +${discipline.name}"></h3>
 
-			<div class="mb-2">
-				<b>Ementa:</b>
-				<span th:text="${discipline.description}"></span>
+				<div class="mb-2">
+					<b>Ementa:</b>
+					<span th:text="${discipline.description}"></span>
+				</div>
+
+				<div class="mb-2">
+					<b>Objetivo:</b>
+					<span th:text="${discipline.objective}"></span>
+				</div>
+
+				<div class="d-flex justify-content-end">
+					<button id="like" type="button" class="rounded-start"
+						th:classappend="${discipline.user.liked}? 'btn-danger' : 'btn-secondary'"
+						th:data-liked="${discipline.user.liked}">
+						<span id="likeButtonText" th:text="${discipline.user.liked} ? 'Descurtir' : 'Curtir'"></span>
+						<i class="fa fa-thumbs-up"></i>
+					</button>
+					<br>
+					<span id="totalLikes" class="border border-2 border-start-0 border-danger p-2 rounded-end"
+						th:text="${discipline.likes}"></span>
+				</div>
 			</div>
 
-			<div class="mb-2">
-				<b>Objetivo:</b>
-				<span th:text="${discipline.objective}"></span>
+			<div class="progress text-center" style="height: 25px;" th:with="progress=${discipline.user.progress}">
+				<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
+					aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"
+					th:style="'width: ' + ${progress} + '%'" th:classappend="${progress} == 100 ? 'bg-green' : 'bg-primary'"
+					th:text="${progress} > 0 ? ${progress} + '% Estudado'">55% estudado</div>
 			</div>
-
-			<div class="d-flex justify-content-end">
-				<button id="like" type="button" class="rounded-start"
-					th:classappend="${discipline.user.liked}? 'btn-danger' : 'btn-secondary'"
-					th:data-liked="${discipline.user.liked}">
-					<span id="likeButtonText" th:text="${discipline.user.liked} ? 'Descurtir' : 'Curtir'"></span>
-					<i class="fa fa-thumbs-up"></i>
-				</button>
-				<br>
-				<span id="totalLikes" class="border border-2 border-start-0 border-danger p-2 rounded-end"
-					th:text="${discipline.likes}"></span>
-			</div>
-		</div>
-
-		<div class="progress text-center" style="height: 25px;" th:with="progress=${discipline.user.progress}">
-			<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
-				aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"
-				th:style="'width: ' + ${progress} + '%'" th:classappend="${progress} == 100 ? 'bg-green' : 'bg-danger'"
-				th:text="${progress} > 0 ? ${progress} + '% ESTUDADO'">55% estudado</div>
 		</div>
 	</div>
 
-	<hr>
-
-	<div class="alert alert-success alert-dismissible fade show text-center"
-		th:if="${!#strings.isEmpty(message)}" role="alert">
-		<th:block th:text="${message}" />
-	</div>
-
-	<div class="card shadow">
-		<div class="card-header">
-			<ul class="nav nav-tabs fw-bolder">
-				<li class="nav-item">
-					<a class="nav-link text-danger" th:classappend="${page} == 'topics'? 'active'" href="#"
-						th:href="@{/disciplines/{id}(id=${discipline.id}, page='topics')}">Tópicos</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link text-danger" th:classappend="${page} == 'tests'? 'active'" href="#"
-						th:href="@{/disciplines/{id}(id=${discipline.id}, page='tests')}">Simulados</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link text-danger" th:classappend="${page} == 'forum'? 'active'" href="#"
-						th:href="@{/disciplines/{id}(id=${discipline.id}, page='forum')}">Fórum</a>
-				</li>
-			</ul>
+	<div class="container">
+		<div class="alert alert-success alert-dismissible fade show" role="alert"
+			th:if="${!#strings.isEmpty(message)}">
+			<span class="text-center" th:text=${message}></span>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
-		<div class="card-body bg-danger">
-			<!-- Topics -->
-			<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'topics')}">
-				<a href="#" class="list-group-item list-group-item-action shadow mb-2 rounded border border-5 p-2"
-					th:each="topic : ${topics}" th:href="@{/topic/{id}(id=${topic.id})}"
-					th:classappend="${topic.user.finished} ? 'border-success'">
-					<div class="d-flex w-100 justify-content-between">
-						<h5 class="mb-1 fw-bolder" th:text="${topic.name}">Topic Name</h5>
 
-						<i class="fa fa-check-circle fa-2x" aria-hidden="true" th:classappend="${topic.user.finished} ? 'green'"></i>
-					</div>
-					<p class="mb-1" th:text="${topic.description}">Some placeholder content in a paragraph.</p>
-					<small class="text-muted">And some muted small print.</small>
-				</a>
+		<div class="card shadow">
+			<div class="card-header">
+				<ul class="nav nav-tabs fw-bolder">
+					<li class="nav-item">
+						<a class="nav-link text-danger" th:classappend="${page} == 'topics'? 'active'" href="#"
+							th:href="@{/disciplines/{id}(id=${discipline.id}, page='topics')}">Tópicos</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-danger" th:classappend="${page} == 'tests'? 'active'" href="#"
+							th:href="@{/disciplines/{id}(id=${discipline.id}, page='tests')}">Simulados</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-danger" th:classappend="${page} == 'forum'? 'active'" href="#"
+							th:href="@{/disciplines/{id}(id=${discipline.id}, page='forum')}">Fórum</a>
+					</li>
+				</ul>
 			</div>
+			<div class="card-body bg-danger">
+				<!-- Topics -->
+				<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'topics')}">
+					<a href="#" class="list-group-item list-group-item-action shadow mb-2 rounded border border-5 p-3"
+						th:each="topic : ${topics}" th:href="@{/topic/{id}(id=${topic.id})}"
+						th:classappend="${topic.user.finished} ? 'border-success'">
+						<div class="d-flex w-100 justify-content-between">
+							<h5 class="mb-1 fw-bolder" th:text="${topic.name}"
+								th:classappend="${topic.user.finished} ? 'text-success'">Topic Name</h5>
 
-			<!-- Tests -->
-			<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'tests')}">
+							<i class="fa fa-check-circle fa-2x" aria-hidden="true"
+								th:classappend="${topic.user.finished} ? 'green'"></i>
+						</div>
 
-				<a href="#" class="list-group-item list-group-item-action shadow-lg mb-2">
-					<div class="d-flex w-100 justify-content-between">
-						<h5 class="mb-1">Simulado - P1</h5>
-						<small class="text-muted">3 days ago</small>
-					</div>
-					<p class="mb-1">Topicos abortados: Topico 1, Topico 2, Topico 3, Topico 4</p>
-					<small class="text-muted">And some muted small print.</small>
-				</a>
-			</div>
+						<p class="mb-1" th:text="${topic.description}">Some placeholder content in a paragraph.</p>
 
-			<!-- Forum -->
-			<div th:if="${#strings.equalsIgnoreCase(page, 'forum')}">
-				<div class="card bg-white mb-3">
-					<div class="card-body">
-						<label>Precisa de Ajuda?</label>
+						<div class="d-flex justify-content-end align-items-center">
+							<i class="fa fa-thumbs-o-up fa-lg text-primary me-1"></i> <small class="fw-bold" th:text=${topic.likes}>10</small>
+						</div>
+					</a>
+				</div>
 
-						<!-- Button trigger modal -->
-						<button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
-							data-bs-target="#forumTopicModal">Criar um novo Tópico</button>
+				<!-- Tests -->
+				<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'tests')}">
 
-						<!-- Modal -->
-						<div class="modal fade" id="forumTopicModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-							aria-hidden="true">
-							<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-								<form action="#" method="post" th:action="@{/disciplines/{id}/forum-topics(id=${discipline.id})}"
-									th:object="${forumTopic}">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h5 class="modal-title" id="exampleModalLabel"
-												th:text="${discipline.code} + ' - Novo Tópico para o Fórum'">Novo Tópico Fórum</h5>
-											<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-										</div>
-										<div class="modal-body">
-											<div>
-												<div class="mb-3">
-													<label>Título</label>
-													<input id="title" type="text" class="form-control" required th:field="*{title}">
-												</div>
+					<a href="#" class="list-group-item list-group-item-action shadow-lg mb-2">
+						<div class="d-flex w-100 justify-content-between">
+							<h5 class="mb-1">Simulado - P1</h5>
+							<small class="text-muted">3 days ago</small>
+						</div>
+						<p class="mb-1">Topicos abortados: Topico 1, Topico 2, Topico 3, Topico 4</p>
+						<small class="text-muted">And some muted small print.</small>
+					</a>
+				</div>
 
-												<div class="mb-3">
-													<label for="exampleFormControlTextarea1" class="form-label">Descrição</label>
-													<textarea id="description" class="form-control" rows="6" required th:field="*{description}"></textarea>
+				<!-- Forum -->
+				<div th:if="${#strings.equalsIgnoreCase(page, 'forum')}">
+					<div class="card bg-white mb-3">
+						<div class="card-body">
+							<label>Precisa de Ajuda?</label>
+
+							<!-- Button trigger modal -->
+							<button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
+								data-bs-target="#forumTopicModal">Criar um novo Tópico</button>
+
+							<!-- Modal -->
+							<div class="modal fade" id="forumTopicModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+								aria-hidden="true">
+								<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+									<form action="#" method="post" th:action="@{/disciplines/{id}/forum-topics(id=${discipline.id})}"
+										th:object="${forumTopic}">
+										<div class="modal-content">
+											<div class="modal-header">
+												<h5 class="modal-title" id="exampleModalLabel"
+													th:text="${discipline.code} + ' - Novo Tópico para o Fórum'">Novo Tópico Fórum</h5>
+												<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+											</div>
+											<div class="modal-body">
+												<div>
+													<div class="mb-3">
+														<label>Título</label>
+														<input id="title" type="text" class="form-control" required th:field="*{title}">
+													</div>
+
+													<div class="mb-3">
+														<label for="exampleFormControlTextarea1" class="form-label">Descrição</label>
+														<textarea id="description" class="form-control" rows="6" required th:field="*{description}"></textarea>
+													</div>
 												</div>
 											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+												<button type="submit" class="btn btn-danger">Criar</button>
+											</div>
 										</div>
-										<div class="modal-footer">
-											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-											<button type="submit" class="btn btn-danger">Criar</button>
-										</div>
-									</div>
-								</form>
+									</form>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="list-group" th:unless="${#lists.isEmpty(forumTopics)}">
-					<a href="#" class="list-group-item list-group-item-action mb-2 shadow" th:each="topic : ${forumTopics}"
-						th:href="@{/disciplines/{id}/forum-topics/{topicId}(id=${discipline.id}, topicId=${topic.id})}">
+					<div class="list-group" th:unless="${#lists.isEmpty(forumTopics)}">
+						<a href="#" class="list-group-item list-group-item-action mb-2 shadow" th:each="topic : ${forumTopics}"
+							th:href="@{/disciplines/{id}/forum-topics/{topicId}(id=${discipline.id}, topicId=${topic.id})}">
 
-						<div class="d-flex w-100 justify-content-between">
-							<h5 class="mb-1" th:text="${topic.title}">Topic Title</h5>
-							<time class="text-muted timeago" th:datetime="${#dates.formatISO(topic.date)}">3 days ago</time>
-						</div>
-						<p class="mb-1 module line-clamp" th:text="${topic.description}">Some placeholder content in a
-							paragraph.</p>
+							<div class="d-flex w-100 justify-content-between">
+								<h5 class="mb-1" th:text="${topic.title}">Topic Title</h5>
+								<time class="text-muted timeago" th:datetime="${#dates.formatISO(topic.date)}">3 days ago</time>
+							</div>
+							<p class="mb-1 module line-clamp" th:text="${topic.description}">Some placeholder content in a
+								paragraph.</p>
 
-						<small class="text-muted" th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo
-							Alves.</small>
-					</a>
+							<small class="text-muted" th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo
+								Alves.</small>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
 
 	<script type="text/javascript" th:src="@{/js/timeago/timeago.js}"></script>
 	<script type="text/javascript" th:src="@{/js/timeago/jquery.timeago.pt-br.js}"></script>
