--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -29,113 +29,115 @@
 </style>
 </head>
 <body>
-	<!-- Topic info -->
-	<div class="card mt-3">
-		<div class="card-body">
-			<h2 class="card-title text-center fw-bolder" th:text="${topic.name}">Topic Name</h2>
-			<p th:text="${topic.description}"></p>
+	<div class="row">
+		<div class="container bg-dark text-white">
+			<div class="card-body px-5 ms-5 me-5">
+				<h2 class="card-title text-center fw-bolder" th:text="${topic.name}">Topic Name</h2>
+				<p th:text="${topic.description}"></p>
 
-			<div class="d-flex justify-content-end">
-				<button id="finishButton" class="btn btn-outline-success me-3"
-					th:classappend="${topic.user.finished} ? 'active'">
-					<i class="fa fa-check"></i>
-					<span th:text="${topic.user.finished} ? 'Concluído' : 'Marcar como concluído'">Marcar como
-						concluído</span>
-				</button>
+				<div class="d-flex justify-content-end">
+					<button id="finishButton" class="btn btn-outline-success me-3"
+						th:classappend="${topic.user.finished} ? 'active'">
+						<i class="fa fa-check"></i>
+						<span th:text="${topic.user.finished} ? 'Concluído' : 'Marcar como concluído'">Marcar como
+							concluído</span>
+					</button>
 
-				<div class="btn-group rounded-start" role="group" aria-label="Like toggle button">
-					<input type="checkbox" class="btn-check" id="likeButton" autocomplete="off"
-						th:checked="${topic.user.liked}">
-					<label id="likingStatus" class="btn btn-outline-primary p-2" for="likeButton">
-						Curtir <i class="fa fa-thumbs-up"></i>
-					</label>
+					<div class="btn-group rounded-start" role="group" aria-label="Like toggle button">
+						<input type="checkbox" class="btn-check" id="likeButton" autocomplete="off"
+							th:checked="${topic.user.liked}">
+						<label id="likingStatus" class="btn btn-outline-primary p-2" for="likeButton">
+							Curtir <i class="fa fa-thumbs-up"></i>
+						</label>
+					</div>
+					<span id="totalLikes"
+						class="fw-bolder text-primary border border-1 border-start-0 border-primary p-2 rounded-end"
+						th:text="${topic.likes}"></span>
 				</div>
-				<span id="totalLikes"
-					class="fw-bolder text-primary border border-1 border-start-0 border-primary p-2 rounded-end"
-					th:text="${topic.likes}"></span>
-			</div>
-			<a id="contribute" href="#headingTwo" class="btn btn-warning">
-				Contribuir com uma Questão <i class="fa fa-upload"></i>
-			</a>
-		</div>
-	</div>
-
-	<div class="alert alert-success alert-dismissible fade show" role="alert"
-		th:if="${!#strings.isEmpty(successMessage)}">
-		<span th:text=${successMessage}></span>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-	</div>
-
-	<!-- Content -->
-	<div class="card mt-5">
-		<div class="card-body" id="content"></div>
-	</div>
-
-	<!-- Quiz -->
-	<div id="quiz-container" class="card mt-5 bg-danger bg-initial-quiz">
-		<div class="card-body">
-			<h4 class="card-title text-light" th:text="'Quiz - ' + ${topic.name}">Quiz</h4>
-
-			<div id="quizResult" class="p-3 text-center text-danger bg-white rounded" style="display: none;">
-				<span class="h4">Resultado do Quiz</span>
-				<br>
-			</div>
-
-			<div id="questionContainer" class="p-2 bg-white rounded" style="display: none;">
-				<span id="questionIndex" class="fw-bold">- Question 1 de 3</span>
-				<hr>
-
-				<h5 id="question">Os sistemas de informacao estao evoluindo de acordo com as tendencias de mercado,
-					eles proporcionam ganhos imensuraveis para as organizacoes no que diz respeito a ganho de espaco
-					organizacao dos arquivos e informacoes e com isso a liberdade de acesso, representada pela possibilidade
-					de trabalhar com os dados oferecidos pelo sistema da melhor forma possivel. Assim sendo, podemos concluir
-					que:</h5>
-				<br>
-
-				<!-- Answers -->
-				<div class="form-check mb-3">
-					<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio1">
-
-					<label class="form-check-label" for="alternativeRadio1">Alternativa 1</label>
-				</div>
-
-				<div class="form-check mb-3">
-					<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio2">
-					<label class="form-check-label" for="alternativeRadio2"> Alternativa 2</label>
-				</div>
-			</div>
-
-			<div class="row mt-3">
-				<div class="col">
-					<button id="finishQuiz" type="button" class="btn btn-secondary btn-lg form-control"
-						style="display: none;">Finalizar</button>
-				</div>
-
-				<div class="col">
-					<button id="answerQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
-						style="display: none;">Responder</button>
-				</div>
-
-				<div class="col">
-					<button id="nextQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
-						style="display: none;" onclick="nextQuestion()">Próxima Pergunta</button>
-				</div>
+				<a id="contribute" href="#uploadQuestion" class="btn btn-warning">
+					Contribuir com uma Questão <i class="fa fa-upload"></i>
+				</a>
 			</div>
 		</div>
 	</div>
-	<button id="startQuiz" class="btn btn-outline-danger btn-lg form-control mb-3">Iniciar Quiz</button>
 
-	<!-- Queston form -->
-	<div class="container mt-3">
-		<div class="accordion" id="newQuestionAccordion">
+	<div class="container mt-5">
+		<div class="alert alert-success alert-dismissible fade show" role="alert"
+			th:if="${!#strings.isEmpty(successMessage)}">
+			<span th:text=${successMessage}></span>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+
+		<h3 class="mt-2">Conteúdo</h3>
+		<div class="card mt-3 shadow">
+			<div class="card-body" id="content"></div>
+		</div>
+
+		<!-- Quiz -->
+		<div id="quiz-container" class="card mt-5 bg-danger bg-initial-quiz">
+			<div class="card-body">
+				<h4 class="card-title text-light" th:text="'Quiz - ' + ${topic.name}">Quiz</h4>
+
+				<div id="quizResult" class="p-3 text-center text-danger bg-white rounded" style="display: none;">
+					<span class="h4">Resultado do Quiz</span>
+					<br>
+				</div>
+
+				<div id="questionContainer" class="p-2 bg-white rounded" style="display: none;">
+					<span id="questionIndex" class="fw-bold">- Question 1 de 3</span>
+					<hr>
+
+					<h5 id="question">Os sistemas de informacao estao evoluindo de acordo com as tendencias de mercado,
+						eles proporcionam ganhos imensuraveis para as organizacoes no que diz respeito a ganho de espaco
+						organizacao dos arquivos e informacoes e com isso a liberdade de acesso, representada pela possibilidade
+						de trabalhar com os dados oferecidos pelo sistema da melhor forma possivel. Assim sendo, podemos
+						concluir que:</h5>
+					<br>
+
+					<!-- Answers -->
+					<div class="form-check mb-3">
+						<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio1">
+
+						<label class="form-check-label" for="alternativeRadio1">Alternativa 1</label>
+					</div>
+
+					<div class="form-check mb-3">
+						<input class="form-check-input" type="radio" name="alternativeRadio" id="alternativeRadio2">
+						<label class="form-check-label" for="alternativeRadio2"> Alternativa 2</label>
+					</div>
+				</div>
+
+				<div class="row mt-3">
+					<div class="col">
+						<button id="finishQuiz" type="button" class="btn btn-secondary btn-lg form-control"
+							style="display: none;">Finalizar</button>
+					</div>
+
+					<div class="col">
+						<button id="answerQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
+							style="display: none;">Responder</button>
+					</div>
+
+					<div class="col">
+						<button id="nextQuestion" type="button" class="btn btn-outline-light btn-lg form-control"
+							style="display: none;" onclick="nextQuestion()">Próxima Pergunta</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<button id="startQuiz" class="btn btn-outline-danger btn-lg form-control shadow">Iniciar Quiz</button>
+
+		<!-- Queston form -->
+		<div class="accordion mt-5" id="uploadQuestion">
 			<div class="accordion-item">
 				<h2 class="accordion-header" id="headingTwo">
-					<button class="accordion-button collapsed bg-warning fw-bold h5" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Contribuir com
-						uma Questão</button>
+					<button class="accordion-button collapsed bg-warning fw-bold" type="button" data-bs-toggle="collapse"
+						data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+						<h4>Contribuindo</h4>
+					</button>
 				</h2>
 				<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-					data-bs-parent="#newQuestionAccordion">
+					data-bs-parent="#uploadQuestion">
 					<div class="accordion-body">
 
 						<div class="card border border-1 border-secondary shadow">
@@ -146,6 +148,11 @@
 										<label for="name" class="h5 form-label fw-bolder">Pergunta</label>
 										<textarea rows="3" name="description" id="description" class="form-control"
 											th:field="*{description}" placeholder="Sua pergunta .." required></textarea>
+										<script>
+											CKEDITOR.replace('description', {
+												uiColor : '#F2F4F4'
+											});
+										</script>
 									</div>
 
 									<div id="alternativesContainer" class="mb-3 p-3 border border-1 border-secondary rounded">
@@ -175,18 +182,23 @@
 										<hr>
 
 										<div class="d-grid gap-2 col-6 mx-auto">
-											<button type="button" id="addAlternative" class="btn btn-outline-secondary">
+											<button type="button" id="addAlternative" class="btn btn-secondary">
 												Adicionar Alternativa <i class="fa fa-plus" aria-hidden="true"></i>
 											</button>
 										</div>
 									</div>
 
 									<div class="mb-3">
-										<label for="type" class="h5 form-label fw-bold">Tipo de Questão</label>
-										<select class="form-select" th:field="*{type}">
+										<label for="type" class="h5 form-label fw-bold">Tipo de Questão (Dificuldade)</label>
+										<select class="form-select" aria-describedby="typeHelp" id="type" th:field="*{type}">
 											<option th:each="type : ${T(com.gutotech.fatecando.model.QuestionType).values()}"
 												th:value="${type}" th:text="${type.displayName}"></option>
 										</select>
+										<div id="typeHelp" class="form-text">
+											O tipo da questão está relacionado com a dificuldade dela.
+											<br>
+											Por exemplo, ao escolher "Simulado" a questão só aparecerá em simulados que contém este tópico.
+										</div>
 									</div>
 
 									<button type="submit" class="btn btn-warning btn-lg form-control mt-5 fw-bold">
@@ -201,6 +213,7 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
 
 	<script type="text/javascript" th:inline="javascript">
