--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -34,15 +34,20 @@
 				background-color: #fff;
 			}
 			
-			.module {
+			.truncate {
 				margin: 0 0 1em 0;
 				overflow: hidden;
-			}
-			
-			.line-clamp {
 				display: -webkit-box;
 				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
+			}
+			
+			.bg-green {
+				background-color: #05B714;
+			}
+			
+			.green {
+				color: #05B714;
 			}
 		</style>
 		
